--- a/src/pages/blog/BlogLayout.css
+++ b/src/pages/blog/BlogLayout.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #fff8fe;
-}
 
 .blog-layout {
   min-height: 100vh;
